--- a/markup/components/S_1/banner/banner.pug
+++ b/markup/components/S_1/banner/banner.pug
@@ -4,7 +4,7 @@ mixin banner()
             .w-center
                 .banner__text-wrap
                     .banner__text
-                        .banner__image-text-title Cook with pleasure
-                        p.banner__image-text-subtitle Our school is for those who want to cook with ease. You will learn how to choose and combine different products, master the culinary techniques and technologies behind most recipes, and figure out the flavor combinations of ingredients.
+                        .banner__image-text-title Delight in Every Bite
+                        p.banner__image-text-subtitle A true culinary masterpiece with a medallion and fresh vegetables — a perfect blend of elegance and natural flavors. Discover the ideal harmony of tastes that will capture your heart.
                     .banner__text-img
                         img(src="static/img/content/banner-img.png" alt="")
