--- a/markup/components/S_1/footer/footer.pug
+++ b/markup/components/S_1/footer/footer.pug
@@ -8,35 +8,27 @@ mixin footer()
                     .footer__logo-wrap
                         a(href="#")
                             img(src="static/img/content/logo.svg" alt="")
-                        p.footer__logo-text No matter what you’re up to, cooking gives your life PERFECT TASTE!  Stay in touch.
+                        p.footer__logo-text No matter what you’re up to, cooking gives your life PERFECT TASTE! Stay in touch.
 
                 .footer__items
                     .footer__item
                         .footer__item-wrap
                             .footer__item-title Menu
-                            ul.footer__item-list
+                            ul.footer__item-list.footer__item-list_menu
                                 li
                                     a(href="/") Home
                                 li
-                                    a(href="#courses") Courses
+                                    a(href="#dishes") Best dishes
                                 li
                                     a(href="#gallery") Gallery
                                 li
                                     a(href="#about") About Us
                     .footer__item
                         .footer__item-wrap
-                            .footer__item-title Offers
-                            ul.footer__item-list
-                                li
-                                    a(href="/terms.html") Terms of Service
-                                li
-                                    a(href="/privacy.html") Privacy Policy
-                                li
-                                    a(href="/legal.html") Legal Information
-                    .footer__item
-                        .footer__item-wrap
                             .footer__item-title Contacts
                             ul.footer__item-list
-                                li +3 63 04 813 679
-                                li info@stedmax.com
-                                li Easy Cooking Kft.</br>1083 Budapest, Fűvésykert utca 8.</br>VI. Emelet
+                                li
+                                    a(href="tel:+380638232524") +380638232524
+                                li
+                                    a(href="mailto:uriyderechey@gmail.com") uriyderechey@gmail.com
+                                li Kyiv
