--- a/markup/components/S_1/header/header.pug
+++ b/markup/components/S_1/header/header.pug
@@ -17,7 +17,7 @@ mixin header()
                         li
                             a(href="/#main") Home
                         li
-                            a(href="/#courses") Courses
+                            a(href="/#dishes") Best dishes
                         li
                             a(href="/#gallery") Gallery
                         li
