--- a/markup/components/S_1/videobox/videobox.pug
+++ b/markup/components/S_1/videobox/videobox.pug
@@ -6,19 +6,19 @@ mixin videobox()
                     video(controls="controls" autoplay muted loop)
                         source(src="static/img/content/2.mp4")
                 .videobox__text
-                    .videobox__text-title Cooking Basics Master
-                    .videobox__text-subtitle Develop essential skills in culinary arts while cooking with well-known kitchen masters in real-time. Enjoy the best practices of elegant and tasty meals creation and prepare the most popular restaurant dishes at home.
+                    .videobox__text-title Spaghetti
+                    .videobox__text-subtitle “Two people carefully remove freshly cooked spaghetti from the pot, preparing it for serving. Perfectly cooked, golden strands of pasta are ready to be topped with sauce and plated. This video captures the process of creating an authentic Italian dish with a focus on quality and attention to detail.”
             .videobox__video-box
                 .videobox__video
                     video(controls="controls" autoplay muted loop)
                         source(src="static/img/content/3.mp4")
                 .videobox__text
-                    .videobox__text-title Sous-chef in Culinary Arts
-                    .videobox__text-subtitle The duties of a sous chef include coordinating and organizing the correct work of cooks and kitchen workers. Learn the basics of grocery shopping, pre-serving food checks, and developing menus and new recipes.
+                    .videobox__text-title Mastery in Every Detail
+                    .videobox__text-subtitle “Two people carefully decorate a pie with strips of dough, creating an elegant lattice design. The delicate artistry adds a beautiful finishing touch to the dessert, showcasing attention to detail and craftsmanship. Watch as these skilled hands transform simple ingredients into a stunning visual masterpiece, ready for the table.”
             .videobox__video-box
                 .videobox__video
                     video(controls="controls" autoplay muted loop)
                         source(src="static/img/content/1.mp4")
                 .videobox__text
-                    .videobox__text-title Pastry and Chocolate Arts Master
-                    .videobox__text-subtitle NGain the unique technologies of the world's confectioners without leaving your home, master the unshakable laws of physics and chemistry of ingredients, and life hacks of professionals in the sweet business.
+                    .videobox__text-title Art of Presentation
+                    .videobox__text-subtitle Watch as a stunning dish comes to life in the hands of a skilled chef. This video showcases the delicate process of plating and presenting a beautiful creation, highlighting the art of food presentation. Every detail is carefully considered to ensure the dish is not only delicious but also visually captivating, ready to impress any guest.
