--- a/markup/pages-src/S_1/index.pug
+++ b/markup/pages-src/S_1/index.pug
@@ -7,13 +7,12 @@ block content
         #main
             +banner
         .w-gap-md
-            .decorated-title Master the power of taste
+            .decorated-title Processes
             .w-center
                 .decorated-subtitle No matter what you’re up to, cooking gives your life PERFECT TASTE!  Stay in touch.
                 +videobox
         .w-gap-md
-
-            #courses.decorated-title.decorated-title-second.active Sign up for our recent classes
+            #dishes.decorated-title.decorated-title-second.active Finest Flavors of Our Kitchen
         .w-center
             .card
                 .card__wrap
@@ -21,43 +20,37 @@ block content
                         img(src="static/img/content/card1.jpg" alt="")
                     .card__wrapper
                         .card__text-wrap
-                            .card__text-title Mediterranean Cuisine
-                            .card__text This cuisine combines the cuisines of the Mediterranean region. As part of the course, you will learn how to prepare complex dishes from cereals and moderate amounts of meat and fish, choose the relevant ingredients, in particular vegetables, and familiarize yourself with the rules of a feast traditional for the Mediterranean region.  A unique feature of Mediterranean cuisine is a balanced diet. It is this principle that underlies the famous Mediterranean diet. Having mastered the basics of preparing dishes of this gastronomic direction, you will provide yourself with a wide field for applying such skills. This course is perfect for those who want to lose weight or improve their health and the nutrition of their loved ones. Don't miss the chance to improve your life right now!
-                            .card__text-price Cost: 250$
-                        .card__text-btn
-                            button.btn.popup-btn(type="button") Buy Now
+                            .card__text-title Paella – The Taste of Spain
+                            .card__text Paella is the soul of Spanish cuisine, originating from Valencia, a city where this dish has become a symbol of local tradition and culture. The main ingredient in paella is rice, which is cooked with various additions such as seafood, chicken, and vegetables. To enhance its aroma and color, saffron is added, giving the rice a golden hue and a subtle yet recognizable fragrance.
+                            .w-gap
+                            .card__text Paella is served in a large pan, inviting guests to eat directly from it, creating a sense of unity and camaraderie. This is a dish that brings people together, as in Spain it is often prepared for large celebrations, family gatherings, and even street festivals. Paella reflects the richness of Spanish culinary heritage and can transport you to the sunny shores of Valencia with its look and aroma alone.
                 .card__wrap
                     .card__image
                         img(src="static/img/content/card2.jpg" alt="")
                     .card__wrapper
                         .card__text-wrap
-                            .card__text-title English Cuisine
-                            .card__text During culinary courses, students will learn to cook English cuisine that is not sophisticated yet pays attention to the quality of ingredients and technology of their production. Students will learn to cook English breakfast and other popular and well-known worldwide meals. We should not forget, for example, that the traditional Sunday Roast Carvery, common in Australia, New Zealand, the United States, and Canada, has its roots in the English cultural tradition. Tasted for centuries: fish and chips, roast with vegetables, roast beef, pudding - can become a stable and hearty diet basement. Emphasize the conservatism of the chef and fidelity to tradition. Impress your family!
-                            .card__text-price Cost: 459$
-                        .card__text-btn
-                            button.btn.popup-btn(type="button") Buy Now
-
+                            .card__text-title French Croissant – A Classic Delight
+                            .card__text The French croissant has become a symbol of French culinary culture. It boasts a delightful crispy outer layer and a tender, buttery taste inside. Making croissants is a true art that requires patience and skill: the dough is rolled and folded multiple times, creating hundreds of thin layers.
+                            .w-gap
+                            .card__text This breakfast treat is ideally served with a fragrant coffee or tea, and it can be paired with jam or chocolate cream for extra indulgence. Croissants are the choice for those who appreciate classics, quality, and elegance. They transport everyone to the streets of Paris, where every morning begins with the aroma of freshly baked pastries.
                 .card__wrap
                     .card__image
                         img(src="static/img/content/card3.jpg" alt="")
                     .card__wrapper
                         .card__text-wrap
-                            .card__text-title Italian Cuisine
-                            .card__text Traditional Italian cuisine is known all over the world, thanks to dishes such as pizza and spaghetti. Very diverse and regional, this direction in cooking is rich in its traditional dishes, so it offers a large field for culinary research. Italian cuisine gained its taste with historical processes, spiced with the cultural influence of the Romans, Greeks, Arabs, and other peoples who once inhabited Italy. Immerse yourself in this mix, give free rein to the love of spices, exotic fruits, and vegetables, or cook fish and seafood as only you can. Create your unique recipe and stand out with exceptional culinary skills where tradition leaves much room for creativity!
-                            .card__text-price Cost: 759$
-                        .card__text-btn
-                            button.btn.popup-btn(type="button") Buy Now
-
+                            .card__text-title Sushi – Japanese Art on a Plate
+                            .card__text Sushi is a culinary art originating from Japan, known worldwide for its delicate flavors and minimalist appearance. Each piece of sushi is made from fresh fish, seafood, and rice seasoned with rice vinegar. An essential element is the balance of flavors achieved by combining fish, rice, and additional ingredients like wasabi and soy sauce.
+                            .w-gap
+                            .card__text Sushi is served with pickled ginger and wasabi, which enhance the flavor of each piece and cleanse the palate between different types. This dish is not only pleasing to the taste but also harmonious in appearance. Sushi embodies the taste of Japan in each carefully crafted piece, tempting you to try more.
                 .card__wrap
                     .card__image
                         img(src="static/img/content/card4.jpg" alt="")
                     .card__wrapper
                         .card__text-wrap
-                            .card__text-title Asian Cuisine
-                            .card__text Rice and noodles are among the staples of Asian cuisine. The abundance of spices, low-fat dishes, and soy products characterize Asian cuisine as a sophisticated one. The most common cooking method is frying in a small amount of hot oil. Another feature of Asian cuisine is that all meals are prepared exclusively from natural products, which are minimally processed while cooked, which allows you to preserve the maximum of vital substances. In addition, Asian cuisine stands out for its extensive use of a variety of seafood. The serving of Asian dishes is also unusual. The colorful presentation deserves a separate study and will create your image of a true gourmet!
-                            .card__text-price Cost: 1059$
-                        .card__text-btn
-                            button.btn.popup-btn(type="button") Buy Now
+                            .card__text-title Italian Pasta – Comfort in Every Bite
+                            .card__text Italian pasta is one of the world’s most popular dishes, enchanting with its simple yet rich flavor. Classic pasta is made from high-quality wheat flour and water, and each type has its unique taste and texture. The most popular pasta types include spaghetti, penne, and fettuccine, each pairing perfectly with a variety of sauces: tomato-based, creamy, or cheese-based.
+                            .w-gap
+                            .card__text Pasta is often seasoned with aromatic herbs like basil and oregano and finished with fresh Parmesan cheese. This dish brings a sense of comfort and warmth, making it perfect for family dinners or festive gatherings. Italian pasta is a delight for the soul, allowing you to immerse yourself in the world of Italian culinary traditions.
         .w-gap-md
             #gallery.decorated-title.active Gallery
             +gallery
@@ -71,9 +64,9 @@ block content
                         .card__wrapper.card__second-text
                             .card__text-wrap
                                 .card__text-title We know and share secrets of cooking!
-                                p.card__text Prepare culinary masterpieces anywhere in the world, anytime! Our school is a unique opportunity to get a dream profession and increase your value with new special knowledge. Everyone loves to eat well, but not everyone knows how to prepare a tasty, satisfying and healthy dish that deserves attention.
-                                p.card__text Well, those who want to master this skill are incredibly lucky. Easy-Cooking classes reveal taste secrets to everyone who needs it. Founded in 2014 by a group of enthusiasts, the amateur gourmet courses are now online! Get the best knowledge that is possible - go on, sign up for our classes!
-                                p.card__text Whatever your path in life is, there's always a place for cooking to upgrade it. Try our experienced specialists' lifehacks to bring your life quality to a new level with professional secrets of the best meals creating ever!
+                                p.card__text We created our establishment out of a love for authentic food that combines tradition with modern culinary ideas. Our dishes are more than just food; they are stories we tell through flavors, aromas, and emotions. We believe that each dish should not only be delicious but also provide a special experience that lingers in memory.
+                                p.card__text Our chefs select only the freshest ingredients to bring out the best in each component. We blend unique recipes from around the world and prepare them with care, crafting dishes that inspire. Our goal is to provide you with an unforgettable experience that sparks your appetite and leaves lasting memories.
+                                p.card__text Join us on this journey of flavors and enjoyment! We look forward to making your lunch or dinner a truly special moment.
                 .decorated-title.decorated-title-third Our team
                 .image-cards
                     .image-cards__card
